# Multimodal-AI

multi-app/: Dockerfile  crypto_api_client.py  cryptocurrency_questions_dataset.json  ignite.py  main.py  meta.json  multi-app.tar  pipeline_training.py  proxy.py  pyproject.toml  start.sh  utils.py
multi-app/config/: execution.json  manifest.json
multi-app/ner/: model  moves
multi-app/ontology_dc8f06af066e4a7880a5938933236037/: multi_config.py  multi_input.py  multi_output.py
multi-app/schemas/: cwi_input.py  llm_input.py  stt_input.py
multi-app/vocab/: strings.json
multi-ontology/dc8f06af066e4a7880a5938933236037/: meta.json  multi-ontology.tar
